Fields on IE11 not editable. Fixed.

--- a/public_html/sites/all/modules/custom/citizen_proposals/css/citizen_proposals.css
+++ b/public_html/sites/all/modules/custom/citizen_proposals/css/citizen_proposals.css
@@ -25,8 +25,7 @@
 	border-radius: 0;
 	width: 100%;
 	padding: 20px 10px;
-	padding: 5px 10px;
-	height: 50px;
+	height: auto;
 	color: #000;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
@@ -142,7 +141,8 @@
 	background: #fff;
 	border-radius: 0;
 	width: 100%;
-	padding: 20px 10px;
+	height: auto;
+    padding: 20px 10px;
 	color: #000;
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
